--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="index.html">
-        <img src="Images/icon/logo_caffeein.png" width="30px" style="margin-bottom: 6px; margin-right: 5px;">Coffeein</a>
+        <img src="Images/logo_caffeein.png" width="30px" style="margin-bottom: 6px; margin-right: 5px;">Coffeein</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -55,9 +55,9 @@
       <div class="col-md-6">
         <div class="bg-dark p-4 rounded shadow h-100">
             <h5>Informasi Kontak</h5>
-            <p><img src="Images/icon/icon_mail.webp" width="20px" style="margin-bottom: 4px;"> koffeein.co.id</p>
-            <p><img src="Images/icon/icon_telephone.png" width="20px" style="margin-bottom: 4px;"> 088-985-837-519</p>
-            <p><img src="Images/icon/icon_location.png" width="30px" style="margin-bottom: 4px;">Semarang, Jawa Tengah</p>
+            <p><img src="Images/icon_mail.webp" width="20px" style="margin-bottom: 4px;"> koffeein.co.id</p>
+            <p><img src="Images/icon_telephone.png" width="20px" style="margin-bottom: 4px;"> 088-985-837-519</p>
+            <p><img src="Images/icon_location.png" width="30px" style="margin-bottom: 4px;">Semarang, Jawa Tengah</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.49954306620575!2d110.47374298540323!3d-7.010141899616845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e708cfe20db52fd%3A0x51fbd82f0300f280!2sJl.%20Pedurungan%20Tengah%20II%20No.25%2C%20Pedurungan%20Tengah%2C%20Kec.%20Pedurungan%2C%20Kota%20Semarang%2C%20Jawa%20Tengah%2050192!5e0!3m2!1sen!2sid!4v1768106788513!5m2!1sen!2sid" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="img-fluid rounded mt-3"></iframe>
         </div>
       </div>
