--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="index.html">
-        <img src="Images/icon/logo_caffeein.png" width="30px" style="margin-bottom: 6px; margin-right: 5px;">Coffeein</a>
+        <img src="Images/logo_caffeein.png" width="30px" style="margin-bottom: 6px; margin-right: 5px;">Coffeein</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
       <span class="navbar-toggler-icon"></span>
     </button>
